<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/promoteUsRoot"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:animateLayoutChanges="true"
    android:background="@color/colorSecondry"
    tools:context="com.example.focpc.mahindralifespaces.ui.activities.promote_us.PromoteUsActivity">

    <android.support.v7.widget.CardView
        android:id="@+id/promoteUsTitleCard"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp"
        app:cardElevation="2dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:fontFamily="@font/proximanova_regular"
            android:gravity="center"
            android:text="@string/promote_us"
            android:textColor="@color/colorMain"
            android:textSize="14sp"
            android:textStyle="bold" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/promoteUsDesc"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:lineSpacingExtra="2sp"
        android:text="@string/help_us_spread_word"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/promoteUsTitleCard" />

    <TextView
        android:id="@+id/typeOfInstLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/proximanova_regular"
        android:text="@string/type_of_inst"
        android:textColor="@color/colorMain"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/promoteUsDesc" />

    <FrameLayout
        android:id="@+id/dropDownBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/grey_border_rectangle"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/typeOfInstLabel">

        <TextView
            android:id="@+id/clickToChooseTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:fontFamily="@font/proximanova_regular"
            android:hint="@string/click_to_choose"
            android:textColor="@color/text_color"
            android:textSize="12sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/dropDownArrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginRight="8dp"
            app:srcCompat="@drawable/ic_arrow_drop_down" />
    </FrameLayout>

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/proximanova_regular"
        android:lineSpacingExtra="2sp"
        android:text="@string/come_up_with"
        android:textColor="@color/text_color"
        android:textSize="12sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dropDownBtn" />

    <android.support.v7.widget.CardView
        android:id="@+id/dropDown"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:cardCornerRadius="1dp"
        app:cardElevation="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/dropDownBtn"
        app:layout_constraintRight_toRightOf="@+id/dropDownBtn"
        app:layout_constraintTop_toBottomOf="@+id/dropDownBtn">

        <ListView
            android:id="@+id/simpleList"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>
